kustomize/base/apim/ingress/apim-whitelisted-ingress.yaml
---
# Copyright (c) 2020, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: choreo-apim-whitelisted-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: apim
spec:
  tls:
  - hosts:
    - apim.domain.com
    secretName: ingress-cert    
  rules:
    - host: apim.domain.com
      http:
        paths:
        - path: /apim
          backend:
            serviceName: choreo-am-service
            servicePort: 9443
        - path: /oauth2
          backend:
            serviceName: choreo-am-service
            servicePort: 9443
        - path: /api/am/store/v1/
          backend:
            serviceName: choreo-am-service
            servicePort: 9443
