kustomize/base/apim/ingress/choreo-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-choreo-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        set_by_lua_block $resourcePath {
          local host = ngx.req.get_headers()["host"];
          local reg = "^(?<subDomain>[^.]+).*";
          local subDomain = ngx.re.match(host, reg);
          local ngx_re = require "ngx.re";
          local subDomainData = ngx_re.split(subDomain['subDomain'], "-");
          return subDomainData[2] .. "/" .. subDomainData[1];
        }
        rewrite "(?i)/" /$resourcePath$uri break;    
    nginx.ingress.kubernetes.io/proxy-send-timeout: "200" 
    nginx.ingress.kubernetes.io/proxy-read-timeout: "200"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
    - hosts:
        - '*.choreoapis.dev'
      secretName: ingress-cert
  rules: 
    - host: '*.choreoapis.dev'
      http:
        paths:
        - path: /
          backend:
            serviceName: choreo-am-gateway-service
            servicePort: 8243
