kustomize/base/apim/ingress/gateway-whitelisted-ingress.yaml
---
# Copyright (c) 2020, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: choreo-apim-gateway-whitelisted-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/service-upstream: "true" 
spec:
  tls:
  - hosts:
    - gateway.domain.com
    secretName: ingress-cert    
  rules:
    - host: gateway.domain.com
      http:
        paths:
        - path: /token
          backend:
            serviceName: choreo-am-gateway-service
            servicePort: 8243
        - path: /token-cors
          backend:
            serviceName: choreo-am-gateway-service
            servicePort: 8243
        - path: /revoke
          backend:
            serviceName: choreo-am-gateway-service
            servicePort: 8243
        - path: /oidcdiscovery
          backend:
            serviceName: choreo-am-gateway-service
            servicePort: 8243
        - path: /authorize
          backend:
            serviceName: choreo-am-gateway-service
            servicePort: 8243
        - path: /userinfo
          backend:
            serviceName: choreo-am-gateway-service
            servicePort: 8243
